--- a/deploy/1_Deploy_VSS_docker_Crusoe.ipynb
+++ b/deploy/1_Deploy_VSS_docker_Crusoe.ipynb
@@ -51,9 +51,9 @@
    "outputs": [],
    "source": [
     "# !git clone https://github.com/NVIDIA-AI-Blueprints/video-search-and-summarization.git\n",
-    "# %cd video-search-and-summarization/docker/\n",
+    "# %cd video-search-and-summarization/docker/launchables\n",
     "\n",
-    "%cd ../docker\n",
+    "%cd ../docker/launchables\n",
     "!ls"
    ]
   },
@@ -283,7 +283,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below cell ensures that the LLM NIM is running before proceeding. LLM NIM service could take a couple of miniutes to get ready."
+    "Below cell ensures that the LLM NIM is running before proceeding.\n",
+    "\n",
+    "<div class=\"alert alert-block alert-success\">\n",
+    "    <b>Note:</b>  LLM NIM service could take a couple of miniutes to get ready.\n",
+    " </div>"
    ]
   },
   {
@@ -306,12 +310,12 @@
     "                print(\"Service is ready.\")\n",
     "                break\n",
     "            else:\n",
-    "                print(\"Service is not ready. Waiting for 15 seconds...\")\n",
+    "                print(\"Service is not ready. Waiting for 30 seconds...\")\n",
     "        else:\n",
-    "            print(f\"Unexpected status code {response.status_code}. Waiting for 15 seconds...\")\n",
+    "            print(f\"Unexpected status code {response.status_code}. Waiting for 30 seconds...\")\n",
     "    except requests.ConnectionError:\n",
-    "        print(\"Service is not ready. Waiting for 15 seconds...\")\n",
-    "    time.sleep(15)"
+    "        print(\"Service is not ready. Waiting for 30 seconds...\")\n",
+    "    time.sleep(30)"
    ]
   },
   {
@@ -452,7 +456,12 @@
     "![Access Tab](images/brev_access_tab.png)\n",
     "\n",
     "2. Refer to the commands in \"Using Brev CLI\" to open VSCode locally  \n",
-    "![Access Tab](images/brev_vscode_access.png)\n",
+    "\n",
+    "    <div class=\"alert alert-block alert-success\">\n",
+    "        <b>Note:</b>  Make sure to <a href=\"https://code.visualstudio.com/docs/setup/mac#_configure-the-path-with-vs-code\" target=\"_blank\">Configure the path with VS Code</a> if you run into erros while accessing instance through VSCode.\n",
+    "    </div>  \n",
+    "\n",
+    "    ![Access Tab](images/brev_vscode_access.png)\n",
     "\n",
     "3. Navigate to the Ports view in the Panel region (Ports: Focus on Ports View), and select Forward a Port  \n",
     "![VSCode Ports](images/vscode_ports.png) \n",
