--- a/deploy/1_Deploy_VSS_docker_Crusoe.ipynb
+++ b/deploy/1_Deploy_VSS_docker_Crusoe.ipynb
@@ -23,7 +23,9 @@
     "\n",
     "This key will be used to pull relevant models and containers from build.nvidia.com and NGC.\n",
     "\n",
-    "Generate the key from [NGC Portal](https://ngc.nvidia.com/) using the same account used to apply for [Blueprint Early Access.](https://developer.nvidia.com/ai-blueprint-for-video-search-and-summarization-early-access/join)"
+    "Generate the key from [NGC Portal](https://ngc.nvidia.com/) using the same account used to apply for [Blueprint Early Access.](https://developer.nvidia.com/ai-blueprint-for-video-search-and-summarization-early-access/join)\n"
+    "\n",
+    "Follow the instructions to [Generate NGC API Key.](https://docs.nvidia.com/ngc/gpu-cloud/ngc-user-guide/index.html#generating-api-key)",
    ]
   },
   {
