added note to confirm NGC access

--- a/deploy/1_Deploy_VSS_docker_Crusoe.ipynb
+++ b/deploy/1_Deploy_VSS_docker_Crusoe.ipynb
@@ -25,7 +25,12 @@
     "\n",
     "Generate the key from [NGC Portal](https://ngc.nvidia.com/) using the same account used to apply for [Blueprint Early Access.](https://developer.nvidia.com/ai-blueprint-for-video-search-and-summarization-early-access/join)\n",
     "\n",
-    "Follow the instructions to [Generate NGC API Key.](https://docs.nvidia.com/ngc/gpu-cloud/ngc-user-guide/index.html#generating-api-key)"
+    "Follow the instructions to [Generate NGC API Key.](https://docs.nvidia.com/ngc/gpu-cloud/ngc-user-guide/index.html#generating-api-key)\n",
+    "\n",
+    "<div class=\"alert alert-block alert-success\">\n",
+    "    <b>Note:</b>  If you have authentication issues when pulling the NIMs, please verify you have the following <a href=\"https://org.ngc.nvidia.com/subscriptions\" target=\"_blank\">Subscriptions</a>: <strong>NVIDIA Developer Program</strong> and <strong>VSS Early Access</strong>\n",
+    " </div>\n",
+    "\n"
    ]
   },
   {
