added nvila vlm support

--- a/deploy/1_Deploy_VSS_docker_Crusoe.ipynb
+++ b/deploy/1_Deploy_VSS_docker_Crusoe.ipynb
@@ -48,6 +48,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Specify the Vision Language Model (VLM)\n",
+    "\n",
+    "By default, we are using [NVILA](https://huggingface.co/Efficient-Large-Model/NVILA-15B) model. You could use other models like VILA-1.5, GPT-4o, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ[\"VLM_MODEL_TO_USE\"] = \"nvila\" #nvila, vila-1.5\n",
+    "os.environ[\"MODEL_PATH\"] = \"git:https://huggingface.co/Efficient-Large-Model/NVILA-15B\" #for vila-1.5, use \"ngc:nim/nvidia/vila-1.5-40b:vila-yi-34b-siglip-stage3_1003_video_v8\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Ensuring the user is on right path"
    ]
   },
@@ -412,8 +431,9 @@
     "import subprocess\n",
     "import time\n",
     "\n",
-    "keywords = [\"Milvus server started\", \"Starting quantization\", \"Quantization done\", \n",
-    "            \"Engine generation completed\", \"TRT engines generated\", \"Uvicorn\", \"VIA Server loaded\", \"Backend\", \"Frontend\"]\n",
+    "keywords = [\"Milvus server started\", \"Downloading model\", \"Downloaded model\", \"Loading checkpoint\", \"VILA TRT model load execution time\", \n",
+    "            \"Starting quantization\", \"Quantization done\", \"Engine generation completed\", \"TRT engines generated\", \"Uvicorn\", \n",
+    "            \"VIA Server loaded\", \"Backend\", \"Frontend\"]\n",
     "\n",
     "# Start the docker compose process in detached mode\n",
     "subprocess.run(['docker', 'compose', 'up', '--quiet-pull', '-d'])\n",
@@ -542,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
