--- a/deploy/1_Deploy_VSS_docker_Crusoe.ipynb
+++ b/deploy/1_Deploy_VSS_docker_Crusoe.ipynb
@@ -482,7 +482,7 @@
     "        <b>Note:</b>  Please Reload the brev page if the shareable URL is showing as unhealthy or follow the alternative steps with VSCode below.\n",
     "    </div>\n",
     "\n",
-    "4. Experience VSS using the gradio based UI application. For quick steps to summarize a video, refer to [this link](https://docs.nvidia.com/vss/content/sample_summarization.html). Additionally, for detailed instructions on how to use the UI, follow [this guide](https://docs.nvidia.com/vss/content/ui_app.html)  \n",
+    "4. Experience VSS using the gradio based UI application. For quick steps to summarize a video, refer to [this link](https://docs.nvidia.com/vss/latest/content/sample_summarization.html). Additionally, for detailed instructions on how to use the UI, follow [this guide](https://docs.nvidia.com/vss/latest/content/ui_app.html)  \n",
     "<img src=\"images/vss_landing_page.png\" alt=\"Access Tab\" width=\"1200\"/>"
    ]
   },
