--- a/deploy/1_Deploy_VSS_docker_Crusoe.ipynb
+++ b/deploy/1_Deploy_VSS_docker_Crusoe.ipynb
@@ -476,11 +476,10 @@
     "<img src=\"images/brev_add_port.png\" alt=\"Access Tab\" width=\"1200\"/>\n",
     "\n",
     "3. Click on the frontend port (9100) Sharable URL link to access blueprint UI  \n",
-    "<img src=\"images/brev_vss_ui_url.png\" alt=\"Access Tab\" width=\"1200\"/>\n",
-    "\n",
-    "<div class=\"alert alert-block alert-success\">\n",
-    "    <b>Note:</b>  Please Reload the brev page if the shareable URL is showing as unhealthy or follow the alternative steps with VSCode below.\n",
-    "</div>\n",
+    "    <div class=\"alert alert-block alert-success\">\n",
+    "        <b>Note:</b>  Please reload the brev page if the shareable URL is showing as unhealthy or follow the alternative steps with VSCode below.\n",
+    "    </div>\n",
+    "    <img src=\"images/brev_vss_ui_url.png\" alt=\"Access Tab\" width=\"1200\"/>\n",
     "\n",
     "4. Experience VSS using the gradio based UI application. For quick steps to summarize a video, refer to [this link](https://docs.nvidia.com/vss/latest/content/sample_summarization.html). Additionally, for detailed instructions on how to use the UI, follow [this guide](https://docs.nvidia.com/vss/latest/content/ui_app.html)  \n",
     "<img src=\"images/vss_landing_page.png\" alt=\"Access Tab\" width=\"1200\"/>"
@@ -496,12 +495,10 @@
     "<img src=\"images/brev_access_tab.png\" alt=\"Access Tab\" width=\"1200\"/>\n",
     "\n",
     "2. Refer to the commands in \"Using Brev CLI\" to open VSCode locally  \n",
-    "\n",
-    "<div class=\"alert alert-block alert-success\">\n",
-    "    <b>Note:</b>  Make sure to <a href=\"https://code.visualstudio.com/docs/setup/mac#_configure-the-path-with-vs-code\" target=\"_blank\">Configure the path with VS Code</a> if you run into erros while accessing instance through VSCode.\n",
-    "</div>  \n",
-    "\n",
-    "<img src=\"images/brev_vscode_access.png\" alt=\"Access Tab\" width=\"1200\"/>\n",
+    "    <div class=\"alert alert-block alert-success\">\n",
+    "        <b>Note:</b>  Make sure to <a href=\"https://code.visualstudio.com/docs/setup/mac#_configure-the-path-with-vs-code\" target=\"_blank\">Configure the path with VS Code</a> if you run into erros while accessing instance through VSCode.\n",
+    "    </div>  \n",
+    "    <img src=\"images/brev_vscode_access.png\" alt=\"Access Tab\" width=\"1200\"/>\n",
     "\n",
     "3. Navigate to the Ports view in the Panel region (Ports: Focus on Ports View), and select Forward a Port  \n",
     "<img src=\"images/vscode_ports.png\" alt=\"VSCode Ports\" width=\"1200\"/>\n",
